fixing missing border

--- a/style.css
+++ b/style.css
@@ -202,16 +202,16 @@ h1 {
 }
 
 .edit {
-  width: 1.5rem;
+  width: 1.7rem;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   cursor: pointer;
 }
 
 .trash {
-  width: 1.5rem;
+  width: 1.7rem;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   cursor: pointer;
 }
 
